--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,10 +1,11 @@
 <footer class="footer">
     <div class="container">
 
-        <p class="text-center">
-            {{ site.title }} {{ site.time | date: '%Y' }} |
-            Powered by <a href="https://github.com/aksakalli/jekyll-doc-theme">Jekyll Doc Theme</a>
-        </p>
-        <!-- <p class="text-muted">Place sticky footer content here.</p> -->
+      <div class="row-fluid">
+	<div class="span4"><small>Copyright © {{ site.title }} {{ site.time | date: '%Y' }} <a href="http://geneontology.org/" title="The Gene Ontology project website">the Gene Ontology</a> (<a href="/page/use-and-license">CC-BY 4.0</a>)<br />
+	    <a href="/form/contact-go" title="Contact the GO helpdesk">Helpdesk</a> • <a href="/page/go-citation-policy" title="How to cite the GO project">Citation/attribution</a> • <a href="/page/use-and-license" title="Terms of use for the GO project">Terms of use</a> <br />
+	    Member of the <a href="http://www.obofoundry.org/" rel="external" title="Open Biological and Biomedical Ontologies">Open Biological and Biomedical Ontologies</a></small></div>
+	<div class="span8"><small>The Gene Ontology Consortium is supported by a P41 grant from the National Human Genome Research Institute (NHGRI) [grant <a href="https://projectreporter.nih.gov/project_info_details.cfm?aid=9209989" rel="external" title="National Human Genome Research Institute grant 2U41HG002273-17"> 2U41HG002273-17</a>].</small></div>
+      </div>
     </div>
 </footer>
