--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -41,8 +41,8 @@ body {
 
 
 .header-container {
-  background-color: black;
-  background: url('../img/bg.jpg') no-repeat 50% 0;
+  /* background-color: black; */
+  /* background: url('../img/bg.jpg') no-repeat 50% 0; */
   color: #fff;
 
   h1 {
