--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -46,7 +46,8 @@ body {
   color: #fff;
 
   h1 {
-    color: #fff;
+    /* color: #fff; */
+    color: #ccc;
   }
   // background-attachment: fixed;
   background-size: cover;
@@ -63,7 +64,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 46px;
+  /* height: 46px; */
   padding-top: 10px;
   background-color: $gray-lighter;
   color: $gray-dark;
