--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -43,7 +43,8 @@ body {
 .header-container {
   /* background-color: black; */
   /* background: url('../img/bg.jpg') no-repeat 50% 0; */
-  color: #fff;
+  /* color: #fff; */
+  color: #ccc;
 
   h1 {
     /* color: #fff; */
