--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -59,13 +59,15 @@ body {
   font-size: 16px;
 }
 .page-content {
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
+  padding-bottom: 30px;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* height: 46px; */
+  height: 56px;
   padding-top: 10px;
   background-color: $gray-lighter;
   color: $gray-dark;
