--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -44,11 +44,11 @@ body {
   /* background-color: black; */
   /* background: url('../img/bg.jpg') no-repeat 50% 0; */
   /* color: #fff; */
-  color: #ccc;
+  color: #333;
 
   h1 {
     /* color: #fff; */
-    color: #ccc;
+    color: #333;
   }
   // background-attachment: fixed;
   background-size: cover;
