--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -22,7 +22,7 @@
             <div class="navbar-right">
                 <form class="navbar-form navbar-left">
                     <div class="form-group has-feedback">
-                        <input id="search-box" type="text" class="form-control" placeholder="Search...">
+                        <input id="search-box" type="text" class="form-control" placeholder="Search documentation...">
                         <i class="fa fa-search form-control-feedback"></i>
                     </div>
                 </form>
