--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -14,7 +14,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | prepend: site.baseurl }}">Documentation</a></li>
-                <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li>
+                <li {% if page.sectionid=='downloads' %} class="active" {% endif %}><a href="{{ "/downloads/home/" | prepend: site.baseurl }}">Downloads</a></li>
+                <!-- <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li> -->
                 <!-- <li {% if page.sectionid=='faq' %} class="active" {% endif %}><a href="{{ "/faq/home/" | prepend: site.baseurl }}">FAQs</a></li> -->
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Newsletter</a></li>
                 <li><a href="http://help.geneontology.org">Contact us</a></li>
@@ -27,7 +28,10 @@
                     </div>
                 </form>
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                  <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+		  <li><a href="/rss.xml"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+		  <li><a href="https://twitter.com/news4go"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+		  <li><a href="https://www.facebook.com/pages/Gene-Ontology/305908656519"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
