--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -28,7 +28,7 @@
                     </div>
                 </form>
                 <ul class="nav navbar-nav">
-                  <li><a href="{{ site.git_address }}"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                  <li><a href="https://github.com/geneontology"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 		  <li><a href="/rss.xml"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
 		  <li><a href="https://twitter.com/news4go"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 		  <li><a href="https://www.facebook.com/pages/Gene-Ontology/305908656519"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
