--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -14,9 +14,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | prepend: site.baseurl }}">Documentation</a></li>
-                <li {% if page.sectionid=='downloads' %} class="active" {% endif %}><a href="{{ "/downloads/home/" | prepend: site.baseurl }}">Downloads</a></li>
-                <!-- <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li> -->
-                <!-- <li {% if page.sectionid=='faq' %} class="active" {% endif %}><a href="{{ "/faq/home/" | prepend: site.baseurl }}">FAQs</a></li> -->
+                <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li>
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Newsletter</a></li>
                 <li><a href="http://help.geneontology.org">Contact us</a></li>
             </ul>
