--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -6,9 +6,11 @@
 	<small>
 	  Copyright © {{ site.title }} {{ site.time | date: '%Y' }}
 	  <a href="http://geneontology.org/" title="The Gene Ontology project website">the Gene Ontology</a> (<a href="/page/use-and-license">CC-BY 4.0</a>)
-	  <br />
-	  <a href="/form/contact-go" title="Contact the GO helpdesk">Helpdesk</a> • <a href="/page/go-citation-policy" title="How to cite the GO project">Citation/attribution</a> • <a href="/page/use-and-license" title="Terms of use for the GO project">Terms of use</a>
-	  <br />
+	  •
+	  <a href="/form/contact-go" title="Contact the GO helpdesk">Helpdesk</a> • <a href="/page/go-citation-policy" title="How to cite the GO project">Citation/attribution</a>
+	  •
+	  <a href="/page/use-and-license" title="Terms of use for the GO project">Terms of use</a>
+	  •
 	  Member of the <a href="http://www.obofoundry.org/" rel="external" title="Open Biological and Biomedical Ontologies">Open Biological and Biomedical Ontologies</a>
 	</small>
       </div>
