Multiple fixes and examples: page permalink, reference to these permalinks, consistency on title usage on top of the page, examples of how to store + reference clickable images, as well as how to open link in new tab

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,24 +1,28 @@
 <footer class="footer">
-  <div class="container">
+	<div class="container">
 
-    <div class="row-fluid">
-      <div class="span4">
-	<small>
-	  Copyright © {{ site.title }} {{ site.time | date: '%Y' }}
-	  <a href="http://geneontology.org/" title="The Gene Ontology project website">the Gene Ontology</a> (<a href="/page/use-and-license">CC-BY 4.0</a>)
-	  •
-	  <a href="/form/contact-go" title="Contact the GO helpdesk">Helpdesk</a> • <a href="/page/go-citation-policy" title="How to cite the GO project">Citation/attribution</a>
-	  •
-	  <a href="/page/use-and-license" title="Terms of use for the GO project">Terms of use</a>
-	  •
-	  Member of the <a href="http://www.obofoundry.org/" rel="external" title="Open Biological and Biomedical Ontologies">Open Biological and Biomedical Ontologies</a>
-	</small>
-      </div>
-      <div class="span8">
-	<small>
-	  The Gene Ontology Consortium is supported by a P41 grant from the National Human Genome Research Institute (NHGRI) [grant <a href="https://projectreporter.nih.gov/project_info_details.cfm?aid=9209989" rel="external" title="National Human Genome Research Institute grant 2U41HG002273-17"> 2U41HG002273-17</a>].
-	</small>
-      </div>
-    </div>
-  </div>
+		<div class="row-fluid">
+			<div class="span4">
+				<small>
+					Copyright © {{ site.title }} {{ site.time | date: '%Y' }}
+					<a href="http://geneontology.org/" title="The Gene Ontology project website">the Gene Ontology</a> (
+					<a href="/page/use-and-license">CC-BY 4.0</a>) •
+					<a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk">Helpdesk</a>
+					•
+					<a href="/page/go-citation-policy" title="How to cite the GO project">Citation/attribution</a>
+					•
+					<a href="/page/use-and-license" title="Terms of use for the GO project">Terms of use</a>
+					• Member of the
+					<a href="http://www.obofoundry.org/" rel="external" title="Open Biological and Biomedical Ontologies">Open Biological and Biomedical Ontologies</a>
+				</small>
+			</div>
+			<div class="span8">
+				<small>
+					The Gene Ontology Consortium is supported by a P41 grant from the National Human Genome Research Institute (NHGRI) [grant
+					<a href="https://projectreporter.nih.gov/project_info_details.cfm?aid=9209989" rel="external" title="National Human Genome Research Institute grant 2U41HG002273-17">
+					2U41HG002273-17</a>].
+				</small>
+			</div>
+		</div>
+	</div>
 </footer>
