--- a/docs/_includes/topnav.html
+++ b/docs/_includes/topnav.html
@@ -17,7 +17,7 @@
                 <li><a href="{{ "/docs/downloads/" | prepend: site.baseurl }}">Downloads</a></li>
                 <!-- <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li> -->
                 <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Newsletter</a></li>
-                <li><a href="http://help.geneontology.org">Contact us</a></li>
+                <li><a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk">Contact us</a></li>
             </ul>
             <div class="navbar-right">
                 <form class="navbar-form navbar-left">
@@ -27,10 +27,10 @@
                     </div>
                 </form>
                 <ul class="nav navbar-nav">
-                  <li><a href="https://github.com/geneontology"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-		  <li><a href="{{ site.baseurl }}/feed.xml"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-		  <li><a href="https://twitter.com/news4go"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-		  <li><a href="https://www.facebook.com/pages/Gene-Ontology/305908656519"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                  <li><a href="https://github.com/geneontology" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+		  <li><a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+		  <li><a href="https://twitter.com/news4go" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+		  <li><a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
         </div>
