--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -94,3 +94,9 @@ body {
 .navbar-form .has-feedback .form-control-feedback{
   top:10px
 }
+
+
+img[src$="center"] {
+  display:block;
+  margin: 0 auto;
+}
