--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -13,7 +13,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/home/" | prepend: site.baseurl }}">Documentation</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/about/" | prepend: site.baseurl }}">About</a></li>
                 <li><a href="{{ "/docs/downloads/" | prepend: site.baseurl }}">Downloads</a></li>
                 <!-- <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li> -->
 		<!--
