--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -14,11 +14,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/about/" | prepend: site.baseurl }}">About</a></li>
-                <li><a href="{{ "/docs/downloads/" | prepend: site.baseurl }}">Downloads</a></li>
-                <!-- <li><a href="http://current.geneontology.org/products/pages/downloads.html">Downloads</a></li> -->
-		<!--
-                <li {% if page.sectionid=='blog' %} class="active" {% endif %}><a href="{{ site.posts.first.url | prepend: site.baseurl }}">Newsletter</a></li>
-		-->
+                <li><a href="{{ "/docs/ontology-documentation/" | prepend: site.baseurl }}">Ontology</a></li>
+                <li><a href="{{ "/docs/go-annotations/" | prepend: site.baseurl }}">Annotations</a></li>
+
+		<li><a href="{{ "/docs/downloads/" | prepend: site.baseurl }}">Downloads</a></li>
                 <li><a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk">Contact us</a></li>
             </ul>
             <div class="navbar-right">
