--- a/css/main.scss
+++ b/css/main.scss
@@ -101,4 +101,8 @@ img[src$="center"] {
   margin: 0 auto;
 }
 
+.u-vertical-bar-left {
+    border-left: 5px solid royalblue;
+    margin-right: 1rem;
+}
 
