--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container">
+<div class="container"  style="width: 100%;">
     <div class="row">
         <div class="col-md-4">
           <br>
