--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container"  style="width: 100%;">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="max-width: 400px;">
           <br>
           {% include docs_nav.html %}
         </div>
