--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,37 +1,90 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container navbar-container" style="width: 100%;">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{site.baseurl}}/img/logonav.png"></span> {{ site.title }}
+                <span>
+                    <img src="{{site.baseurl}}/img/logonav.png">
+                </span>
+                {{ site.title }}
             </a>
         </div>
+
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}><a href="{{ "/docs/about/" | prepend: site.baseurl }}">About</a></li>
-                <li><a href="{{ "/docs/ontology-documentation/" | prepend: site.baseurl }}">Ontology</a></li>
-                <li><a href="{{ "/docs/go-annotations/" | prepend: site.baseurl }}">Annotations</a></li>
+                <li {% if page.sectionid=='docs' %} class="active" {% endif %}>
+                    <a href="{{ " /docs/introduction-to-go-resource/ " | prepend: site.baseurl }}">About</a>
+                </li>
+                <li>
+                    <a href="{{ " /docs/ontology-documentation/ " | prepend: site.baseurl }}">Ontology</a>
+                </li>
+                <li>
+                    <a href="{{ " /docs/go-annotations/ " | prepend: site.baseurl }}">Annotations</a>
+                </li>
 
-		<li><a href="{{ "/docs/downloads/" | prepend: site.baseurl }}">Downloads</a></li>
-                <li><a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk">Contact us</a></li>
-            </ul>
-            <div class="navbar-right">
-                <form class="navbar-form navbar-left">
-                    <div class="form-group has-feedback">
-                        <input id="search-box" type="text" class="form-control" placeholder="Search documentation...">
-                        <i class="fa fa-search form-control-feedback"></i>
+                <li>
+                    <a href="{{ " /docs/downloads/ " | prepend: site.baseurl }}">Downloads</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Help
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="width:248px; margin-bottom: 0px">
+
+                        <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}" style="display:block; padding: 1px 5px;">
+                            <i class="fa fa-question-circle"></i>
+                            FAQs</a>
+
+                        <a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk" style="display:block; padding:1px 5px;">
+                            <i class="fa fa-comments-o"></i>
+                            Contact us</a>
+
+                        <nav class="navbar navbar-light bg-light" style="margin-bottom: 0px; padding: 0px 5px; min-height: 30px;">
+
+                            <form class="navbar-form navbar-left" style="margin: 0px; padding: 0px;">
+                                <div class="form-group has-feedback">
+                                    <input id="search-box" type="text" class="form-control" placeholder="Search documentation...">
+                                    <i class="fa fa-search form-control-feedback"></i>
+                                </div>
+                            </form>
+
+                        </nav>
+
                     </div>
-                </form>
+                </li>
+
+            </ul>
+
+            <div class="navbar-right">
                 <ul class="nav navbar-nav">
-                  <li><a href="https://github.com/geneontology" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-		  <li><a href="{{ site.baseurl }}/feed.xml" target="blank"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-		  <li><a href="https://twitter.com/news4go" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-		  <li><a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li>
+                        <a href="https://github.com/geneontology" target="blank">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ site.baseurl }}/feed.xml" target="blank">
+                            <i class="fa fa-rss" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/news4go" target="blank">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
