--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -4,6 +4,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+
 // Core variables and mixins
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
@@ -54,3 +55,11 @@
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+
+
+// put at the end, so we can override bootstrap default values
+@import "custom/variables";
+@import "custom/base";
+@import "custom/typography";
+@import "custom/layout";
+@import "custom/utilities";
