--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">
+            <a class="navbar-brand" href="{{ site.baseurl }}/" style="font-weight: 900;">
                 <span>
                     <img src="{{site.baseurl}}/img/logonav.png">
                 </span>
