--- a/_sass/custom/_variables.scss
+++ b/_sass/custom/_variables.scss
@@ -7,3 +7,40 @@ $color-quaternary: #dab61a;
 $color-white: #fff;
 $color-grey: rgb(206, 203, 203);
 $color-black: #000;
+
+
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
+
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+$color-grey-dark: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
+$color-white: #fff;
+$color-black: #000;
+
+$color-primary: #4965c2;
+$color-primary-light: #5577e7;
+$color-primary-dark: #2b418a;
+
+$color-green: #55c57a;
+$color-green-light: #7ed56f;
+$color-green-dark: #28b485;
+
+$color-purple: #8e2eac;
+$color-purple-light: #b33dd6;
+$color-purple-dark: #6b2081;
+
+$value-xxsmall: 0.5rem;
+$value-xsmall: 1rem;
+$value-small: 2rem;
+$value-medium: 4rem;
+$value-large: 6rem;
+$value-xlarge: 8rem;
+$value-xxlarge: 10rem;
