--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top go-navbar">
+
     <div class="container navbar-container" style="width: 100%;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -8,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/" style="font-weight: 900;">
+            <a class="navbar-brand go-link" href="{{ site.baseurl }}/">
                 <span>
                     <img src="{{site.baseurl}}/img/logonav.png">
                 </span>
@@ -17,46 +18,75 @@
         </div>
 
         <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li {% if page.sectionid=='docs' %} class="active" {% endif %}>
-                    <a href="{{ " /docs/introduction-to-go-resource/ " | prepend: site.baseurl }}">About</a>
-                </li>
-                <li>
-                    <a href="{{ " /docs/ontology-documentation/ " | prepend: site.baseurl }}">Ontology</a>
-                </li>
-                <li>
-                    <a href="{{ " /docs/go-annotations/ " | prepend: site.baseurl }}">Annotations</a>
-                </li>
+            <ul class="nav navbar-nav">    
 
-                <li>
-                    <a href="{{ " /docs/downloads/ " | prepend: site.baseurl }}">Downloads</a>
-                </li>
+                {% for doc in site.data.docs %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
+                            style="padding: 8px 3px;" aria-expanded="false">
+                            {{ doc.title }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" 
+                            style="width:248px; margin-bottom: 0px; padding: 0px; transform:translateY(-3px)">
+                            {% for subdoc in doc.docs %}
+
+                                {% for doc in site.docs %}
+                                    {% assign filename = doc.url | replace: '/docs/', '' %}
+                                    {% assign filename = filename | replace: '/', '' %}
+                                    
+                                    {%if filename == subdoc %}
+                                    <a href="{{doc.url}}" class="dropdown-menu__item__link">{{ doc.title }}</a>
+                                    {% endif %}
+                                {% endfor %}
+
+                            {% endfor %}                            
+                        </div>
+                    </li>
+                {% endfor %}
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                        style="padding: 8px 3px;" aria-expanded="false">
                         Help
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="width:248px; margin-bottom: 0px">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="width:248px; margin-bottom: 0px;">
 
-                        <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}" style="display:block; padding: 1px 5px;">
+                        <a href="{{ " /docs/faq/ " | prepend: site.baseurl }}"  class="dropdown-menu__item__link">
                             <i class="fa fa-question-circle"></i>
                             FAQs</a>
 
-                        <a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk" style="display:block; padding:1px 5px;">
+                        <a href="{{" /search "}}" title="Search GO Documentation"   class="dropdown-menu__item__link">
+                            <i class="fa fa-search"></i>
+                            Search Documentation</a>
+
+                        <a href="http://help.geneontology.org" target="blank" title="Contact the GO helpdesk"   class="dropdown-menu__item__link">
                             <i class="fa fa-comments-o"></i>
                             Contact us</a>
 
-                        <nav class="navbar navbar-light bg-light" style="margin-bottom: 0px; padding: 0px 5px; min-height: 30px;">
 
-                            <form class="navbar-form navbar-left" style="margin: 0px; padding: 0px;">
+                        <!-- <nav class="navbar navbar-light bg-light" style="margin-bottom: 0px; padding: 0px 5px; min-height: 30px;">
+
+                            <!-- <form class="navbar-form navbar-left" style="margin: 0px; padding: 0px;">
                                 <div class="form-group has-feedback">
                                     <input id="search-box" type="text" class="form-control" placeholder="Search documentation...">
                                     <i class="fa fa-search form-control-feedback"></i>
                                 </div>
-                            </form>
+                            </form> -->
 
-                        </nav>
+                        <!-- 
+                            <form class="navbar-form navbar-left" style="margin: 0px; padding: 0px;">
+                                <div class="form-group has-feedback input-group">
+                                    <input id="search-box" type="text" class="form-control" 
+                                            placeholder="Search documentation..."
+                                            style="width:80%; border-radius:25px 0px 0px 25px;">
+                                    <a class="btn u-background-gradient-primary u-no-transform" 
+                                        href="{{ " /search" | prepend: site.baseurl }}" role="button"
+                                        style="margin: 0px 2px; border-radius:0px 25px 25px 0px; height: 40px">
+						            <i class="fa fa-search"></i></a>
+                                </div>
+                            </form> -->
+
+                        <!-- </nav> -->
 
                     </div>
                 </li>
@@ -66,27 +96,61 @@
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="https://github.com/geneontology" target="blank">
+                        <a href="https://github.com/geneontology" target="blank" style="padding: 8px 3px;">
                             <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="{{ site.baseurl }}/feed.xml" target="blank">
+                        <a href="{{ site.baseurl }}/feed.xml" target="blank" style="padding: 8px 3px;">
                             <i class="fa fa-rss" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/news4go" target="blank">
+                        <a href="https://twitter.com/news4go" target="blank" style="padding: 8px 3px;">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank">
+                        <a href="https://www.facebook.com/pages/Gene-Ontology/305908656519" target="blank" style="padding: 8px 3px;">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
+
+
     </div>
+<!-- 
+    {% for doc in site.data.docs %}
+    <ul>
+        {{ doc.title }} 
+        {% for subdoc in doc.docs %}
+
+            {% for doc in site.docs %}
+            <ul>
+                {% assign filename = doc.url | replace: '/docs/', '' %}
+                {% assign filename = filename | replace: '/', '' %}
+                
+                {%if filename == subdoc %}
+                    <li>{{ doc.title }}</li>
+                {% endif %}
+            </ul>
+            {% endfor %}
+    
+
+        {% endfor %}
+        </li>
+    </ul>
+    {% endfor %}
+     -->
+
+
+
+    <!-- {% for doc in site.docs %}
+    <ul>
+        {{ doc.id | replace: '/docs/', '' }}
+    </ul>
+    {% endfor %} -->
+
 </nav>
