New design - test

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,6 +4,6 @@ layout: default
 
 <div class="container"  style="width: 100%;">
     <div class="row">
-        <main id="markdown-content-container" class="container">{{ content }}</main>
+        <main id="markdown-content-container" class="container" style="width:90%">{{ content }}</main>
     </div>
 </div>
