--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
 						<a href="/" class="footer__link">Gene Ontology</a>
 					</li>
 					<li class="footer__item">
-						<a href="/docs/collaborations/" class="footer__link">Collaborators</a>
+						<a href="/docs/contributors/" class="footer__link">Contributors</a>
 					</li>
 					<li class="footer__item">
 						<a href="http://help.geneontology.org" class="footer__link" target="blank">Contact us</a>
