--- a/_sass/custom/_typography.scss
+++ b/_sass/custom/_typography.scss
@@ -107,7 +107,7 @@ a:not(.btn):not(.list-group-item):not(.dropdown-menu__item__link):not(.go-link):
 
 .go-main-logo {
   filter: drop-shadow(8px 8px 10px white);
-  filter: blur(5px);  
+  // filter: blur(5px);  
 }
 
 .site {
