--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,188 +5,18 @@
 
 <body>
 
-        {% include topnav.html %}   
-<!--     
-        <div class="left">
-                <div class="item">
-                <span class="glyphicon fa fa-home"></span>
-                    <a href="/">Home</a></div>
-                <div class="item active">
-                <span class="glyphicon fa fa-info-circle"></span>
-                    <a href="/docs/about/">About</a></div>
-                <div class="item">
-                <span class="glyphicon fa fa-share-alt"></span>
-                    <a href="/docs/ontology-documentation/">Ontology</a></div>
-                <div class="item">
-                <span class="glyphicon fa fa-clone"></span>
-                    <a href="/docs/go-annotations/">Annotations</a></div> 
-                <div class="item">
-                <span class="glyphicon fa fa-cogs"></span>
-                    Tools</div>
-                <div class="item">
-                <span class="glyphicon fa fa-download"></span>
-                    Downloads</div>    
-                </div> -->
-           
-                <div class="page-content">
-                        <div class="wrapper">
-                            {{ content }}
-                        </div>
-                    </div>
+    {% include topnav.html %}
 
 
-
-<!-- 
-                    <div class="dropdown">
-                            <a id="dLabel" role="button" data-toggle="dropdown" class="btn btn-primary" data-target="#" href="/page.html">
-                                Dropdown <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-                              <li><a href="#">Some action</a></li>
-                              <li><a href="#">Some other action</a></li>
-                              <li class="divider"></li>
-                              <li class="dropdown-submenu">
-                                <a tabindex="-1" href="#">Hover me for more options</a>
-                                <ul class="dropdown-menu">
-                                  <li><a tabindex="-1" href="#">Second level</a></li>
-                                  <li class="dropdown-submenu">
-                                    <a href="#">Even More..</a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">3rd level</a></li>
-                                        <li><a href="#">3rd level</a></li>
-                                    </ul>
-                                  </li>
-                                  <li><a href="#">Second level</a></li>
-                                  <li><a href="#">Second level</a></li>
-                                </ul>
-                              </li>
-                            </ul>
-                        </div>
-                    </div> -->
-
-<!-- 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">NavBar</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://github.com/fontenele/bootstrap-navbar-dropdowns" target="_blank">GitHub Project</a></li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu 1 <b class="caret"></b></a>
-                        <ul class="dropdown-menu multi-level">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                            <li class="dropdown-submenu">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-submenu">
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="#">Action</a></li>
-                                                    <li><a href="#">Another action</a></li>
-                                                    <li><a href="#">Something else here</a></li>
-                                                    <li class="divider"></li>
-                                                    <li><a href="#">Separated link</a></li>
-                                                    <li class="divider"></li>
-                                                    <li><a href="#">One more separated link</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                                <li class="dropdown-submenu">
-                                <a href="http://stackoverflow.com/questions/15697968/how-to-disable-bootstraps-button-dropdown" class="dropdown-toggle color-link" data-toggle="dropdown-toggle disabled">On click(link) and hover</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-submenu">
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="#">Action</a></li>
-                                                    <li><a href="#">Another action</a></li>
-                                                    <li><a href="#">Something else here</a></li>
-                                                    <li class="divider"></li>
-                                                    <li><a href="#">Separated link</a></li>
-                                                    <li class="divider"></li>
-                                                    <li><a href="#">One more separated link</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu 2 <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                            <li class="dropdown-submenu">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-submenu">
-                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                                <ul class="dropdown-menu">
-                                                    <li><a href="#">Action</a></li>
-                                                    <li><a href="#">Another action</a></li>
-                                                    <li><a href="#">Something else here</a></li>
-                                                    <li class="divider"></li>
-                                                    <li><a href="#">Separated link</a></li>
-                                                    <li class="divider"></li>
-                                                    <li><a href="#">One more separated link</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+    <div class="page-content">
+        <div class="wrapper">
+            {{ content }}
         </div>
-    </div> -->
+    </div>
 
 
-    <div class="u-margin-bottom-xlarge"></div>
-    <!-- {% include footer.html %} -->
+    <div class="u-margin-bottom-xxxxlarge"></div>
+    {% include footer.html %}
     {% include js_files.html %}
 </body>
 
