--- a/_sass/custom/_utilities.scss
+++ b/_sass/custom/_utilities.scss
@@ -185,6 +185,13 @@
     margin-bottom: $value-xxlarge;
 }
 
+.u-margin-bottom-xxxlarge {
+    margin-bottom: $value-xxxlarge;
+}
+
+.u-margin-bottom-xxxxlarge {
+    margin-bottom: $value-xxxxlarge;
+}
 
 .u-margin-bottom-responsive {
     margin-bottom: calc(2px + 3vw);
