--- a/_sass/custom/_variables.scss
+++ b/_sass/custom/_variables.scss
@@ -44,3 +44,5 @@ $value-medium: 4rem;
 $value-large: 6rem;
 $value-xlarge: 8rem;
 $value-xxlarge: 10rem;
+$value-xxxlarge: 12rem;
+$value-xxxxlarge: 14rem;
