--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container"  style="width: 100%;">
+<div class="container u-margin-bottom-xlarge"  style="width: 100%;">
     <div class="row">
         <main id="markdown-content-container" class="container" style="width:90%">{{ content }}</main>
     </div>
